src/assets/less/components/results-table-output.less
.c-gp-results-table-output {
	font-family: Lexend, sans-serif;
	font-style: normal;
	font-weight: 400;
	-webkit-font-smoothing: antialiased;
	width: 100%;
	display: flex;
	flex-direction: column;
	padding-bottom: 32px;

	.results-table-wrapper {
		overflow-y: auto;
		scrollbar-gutter: stable;
		max-height: max(50vh, 320px);

		@media (min-width: @screen-sm-min) {
			padding: 0 24px 0 32px; // +8px scrollbar on the right
			max-height: fit-content;
		}
	}

	.sort-options {
		display: flex;
		align-items: center;
		justify-content: flex-end;
		column-gap: 12px;
		padding: 8px 16px;
		width: 100%;
		background: #fbfbfb;
		border-bottom: 1px solid #e7e7ee;

		> label {
			font-weight: 400;
		}

		&_select {
			display: flex;
			align-items: center;
			flex-wrap: nowrap;
			width: 70%;
			border: 1px solid #e7e7ee;
			border-radius: 8px;
			background: #fff;

			> button {
				height: 100%;
				width: 36px;
				border: none;
				box-shadow: none;
				background: #fff;
			}

			.select {
				width: inherit;
				flex-grow: 1;
				border-right: 1px solid #e7e7ee;

				button {
					height: 32px;
					border: none;
					box-shadow: none;
				}
			}
		}

		@media (min-width: @screen-sm-min) {
			display: none;
		}
	}

	.results-table {
		width: 100%;
		background: #fbfbfb;
		border-left: 1px solid #e7e7ee;
		border-right: 1px solid #e7e7ee;
		border-bottom: 1px solid #e7e7ee;

		@media (min-width: @screen-sm-min) {
			border-bottom-left-radius: 8px;
			border-bottom-right-radius: 8px;
		}

		&.single-target {
			.results-table_header_cell {
				&.location {
					flex-grow: 1;
				}
			}

			.results-table_row_location {
				flex-grow: 1;
			}

			.results-table_row_stats {
				flex-grow: 0;

				&_subrow {
					width: 100%;
				}
			}
		}

		&_header {
			display: none;
			width: 100%;
			background: #f3f5f6;

			@media (min-width: @screen-lg-min) {
				display: flex;
				border-bottom: 1px solid rgba(231, 231, 238, .91);
			}

			button {
				display: flex;
				white-space: nowrap;
				align-items: center;
				gap: 4px;
				background: #f3f5f6;
				border: none;
				color: #17233a;
			}

			&_cell {
				display: flex;
				align-items: center;
				height: 40px;
				background: #f3f5f6;
				color: #17233a;
				font-size: 14px;
				font-weight: 600;
				line-height: 20px;

				&.location, &.targets, &.quality, &.rtt, &.ip {
					padding-left: 16px;
				}

				&.location {
					width: 300px;
					padding-left: 24px;
				}

				&.rtt {
					display: inline-flex;
					width: 240px;

					@media (min-width: @screen-lg-min) {
						width: 320px;
					}

					:first-child.rtt_text {
						width: calc(31% - (12px + 12px + 12px + 20px) / 4);
					}

					.rtt_text {
						display: inline-flex;
						justify-content: center;
						width: calc(23% - (12px + 12px + 12px + 20px) / 4);
					}

					.rtt_separator {
						display: inline-flex;
						justify-content: center;
						width: 12px;
					}
				}

				&.targets {
					width: 194px;
				}

				&.quality {
					width: 140px;
				}

				&.ip {
					width: 120px;

					@media (min-width: @screen-lg-min) {
						width: 180px;
					}
				}

				&.graph {
					width: 72px;
				}
			}
		}

		&_row {
			position: relative;
			display: flex;
			flex-direction: column;
			border-bottom: 1px solid #e7e7ee;

			@media (min-width: @screen-lg-min) {
				flex-direction: row;
			}

			@media (min-width: @screen-sm-min) {
				&:hover {
					.results-table_row_location_actions {
						display: flex;
					}
				}
			}

			&:nth-last-child(1) {
				border-bottom: 0;
			}

			&_location {
				position: relative;
				display: flex;
				flex-grow: 1;
				align-items: center;
				column-gap: 8px;
				padding: 16px;
				width: 100%;

				@media (min-width: @screen-lg-min) {
					flex-grow: initial;
					width: 300px;
					padding: 16px 24px;
				}

				&_status-line {
					display: inline-flex;
					flex-direction: column;
					flex-shrink: 0;
					height: 32px;
					border-radius: 8px;
					width: 2px;

					@media (min-width: @screen-lg-min) {
						height: 28px;
					}

					&_top, &_bottom {
						height: 16px;
						width: 2px;

						@media (min-width: @screen-lg-min) {
							height: 14px;
						}
					}
				}

				&_data {
					display: flex;
					flex-direction: column;

					>span {
						&:nth-child(1) {
							color: #17233a;
							font-size: 14px;
							font-weight: 500;
							line-height: 20px;
						}

						&:nth-child(2) {
							font-size: 12px;
							line-height: 12px;
						}
					}
				}

				&_actions {
					display: none;
					position: absolute;
					top: 50%;
					transform: translateY(-50%);
					left: -28px;
					overflow: hidden;

					&_btn {
						border-top-left-radius: 8px;
						border-bottom-left-radius: 8px;
						display: flex;
						align-items: center;
						justify-content: center;
						cursor: pointer;
						font-size: 20px;
						width: 28px;
						height: 28px;
						background-color: #f3f5f6;
						border: 1px solid #e7e7ee;

						@media (min-width: @screen-sm-min) {
							&:hover {
								background-color: #46e1bc;
								color: #fff;

								&:active, &:focus, &:focus-visible {
									background-color: #17d4a7;
								}
							}
						}

						@media (max-width: @screen-xs-max) {
							transition: all .2s ease-in-out;

							&:active {
								transform: scale(1.1);
								transition: .1s;
							}
						}
					}
				}
			}

			&_stats {
				display: flex;

				@media (min-width: @screen-lg-min) {
					flex-direction: column;
					justify-content: center;
					flex-grow: 1;
				}

				&_subrow {
					display: flex;
					flex-direction: column;
					width: 50%;

					@media (min-width: @screen-lg-min) {
						flex-direction: row;
						width: 100%;
					}

					&:nth-child(2n) {
						border-left: 1px solid #e7e7ee;

						@media (min-width: @screen-lg-min) {
							border-top: 1px solid #e7e7ee;
							border-left: none;
						}
					}

					&_cell {
						display: flex;
						align-items: center;
						padding: 0 16px;
						min-height: 36px;

						@media (min-width: @screen-lg-min) {
							height: 44px;
							padding: 0 0 0 16px;
						}

						&.probe-failed, &.probe-offline {
							display: flex;
							align-items: center;
							column-gap: 8px;
							font-size: 14px;
							font-weight: 400;
							line-height: 20px;
							color: #17233a;

							@media (min-width: @screen-lg-min) {
								width: 652px;
							}
						}

						&.targets {
							width: 194px;

							.results-table_row_stats_subrow_cell_value > span {
								display: inline-block;
								max-width: 188px;
								overflow: hidden;
								white-space: nowrap;
								text-overflow: ellipsis;
								height: 28px;
								padding: 2px 4px;
								border-radius: 8px;
								border: 1px solid #e7e7e7;
								background: #f3f5f6;
							}
						}

						&.targets, &.quality, &.rtt, &.ip, &.probe-failed, &.probe-offline {
							padding-left: 16px;
						}

						&.quality {
							width: 100%;

							@media (min-width: @screen-lg-min) {
								width: 140px;
							}
						}

						&.ip {
							width: 100%;

							@media (min-width: @screen-lg-min) {
								width: 180px;
							}

							span {
								overflow: hidden;
								text-overflow: ellipsis;
								white-space: nowrap;
							}

							.c-placeholder-skeleton {
								@media (min-width: @screen-lg-min) {
									width: calc(100% - 16px);
								}
							}
						}

						&.rtt {
							width: 100%;

							@media (min-width: @screen-lg-min) {
								width: 320px;
							}

							.results-table_row_stats_subrow_cell_value {
								display: flex;
								flex-direction: column;

								@media (min-width: @screen-lg-min) {
									flex-direction: row;
								}
							}
						}

						&.graph {
							width: 100%;

							@media (min-width: @screen-lg-min) {
								width: 72px;
								padding: 0;
							}

							.c-placeholder-skeleton {
								@media (min-width: @screen-lg-min) {
									width: calc(100% - 8px);
								}
							}
						}

						&_value {
							display: flex;
							align-items: center;
							flex-grow: 1;
							width: 100%;
							font-size: 14px;
							font-weight: 400;
							line-height: 20px;
							color: #17233a;
							justify-content: space-between;

							@media (min-width: @screen-lg-min) {
								justify-content: flex-start;
							}

							&_header {
								color: #17233a;
								font-weight: 600;

								@media (min-width: @screen-lg-min) {
									display: none;
								}
							}

							.timings {
								display: flex;
								align-items: center;
								justify-content: space-between;
								width: 100%;
								min-height: 36px;

								@media (min-width: @screen-lg-min) {
									width: calc(23% - (12px + 12px + 12px + 20px) / 4);
									min-height: 0;
									justify-content: center;

									&:first-of-type {
										width: calc(31% - (12px + 12px + 12px + 20px) / 4);
									}
								}

								&.no-value {
									@media (min-width: @screen-lg-min) {
										width: 20%;
									}
								}

								&_header {
									display: inline-flex;
									color: #17233a;
									font-weight: 600;

									@media (min-width: @screen-lg-min) {
										display: none;
									}

									> span:nth-child(1) {
										text-transform: capitalize;
									}
								}

								&_value {
									display: inline-flex;
									white-space: nowrap;
								}

								&_units {
									padding-left: .5ch;

									@media (min-width: @screen-lg-min) {
										display: none;
									}
								}

								&_separator {
									display: none;

									@media (min-width: @screen-lg-min) {
										display: inline-flex;
										width: 16px;
										justify-content: center;
									}
								}
							}

							.lg-screen-units {
								display: none;

								@media (min-width: @screen-lg-min) {
									display: inline-flex;
									width: 20px;
									justify-content: flex-start;
								}
							}
						}
					}
				}
			}
		}
	}

	.c-placeholder-skeleton {
		width: 50%;

		@media (min-width: @screen-lg-min) {
			width: 100%;
		}

		.skeleton-subheader_content-wrapper {
			width: 100%;
		}
	}
}

